capture image feature
